tests/typing/bad/testfile-arith-3.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main() { int *p; bool *q; putchar(p-q); }
